--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ksp",
-    "description": "Kissy Simple Pipe",
+    "description": "Kissy Simple Pie",
     "version": "0.0.1",
     "author": "Neekey ni184775761@gmail.com",
     "keywords": [ "ksp" ],
