--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "iconv-lite": "*",
         "commander": "*",
         "mustache": "*",
-        "underscore": "*"
+        "underscore": "*",
+        "uglify-js": "*"
     }
 }
