使用`npmlog`进行信息的输出

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "commander": "*",
         "mustache": "*",
         "underscore": "*",
-        "uglify-js": "*"
+        "uglify-js": "*",
+        "npmlog": "*"
     }
 }
